.xmonad/xmonad.errors

xmonad.hs:416:49: error: parse error on input ‘]’
    |
416 |         , ("<Print>", spawn "xfce4-screensaver")] 
    |                                                 ^
